# Share-skills

./: .claudeignore  .gitignore  Makefile  README.md  agent.md  attach_claude_skill.sh  main.py  pyproject.toml  skill.md
openspec/changes/archive/2026-03-21-html-to-ppt/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-improve-roboflow-train-skill/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-latex-to-pdf/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-md-to-letex/: design.md  proposal.md  tasks.md
openspec/specs/data-visualizer/: spec.md
openspec/specs/html-to-ppt/: spec.md
openspec/specs/keyword-links-wf/: spec.md
openspec/specs/latex-to-pdf/: spec.md
openspec/specs/md-to-letex/: spec.md
openspec/specs/mindmap-generation/: spec.md
openspec/specs/roboflow-ray-train/: spec.md
openspec/specs/roboflow-train-design/: spec.md
plugins/: Makefile
plugins/.claude-plugin/: marketplace.json
plugins/create-mindmap-plugin/commands/: create_mindmap.py  test_create_mindmap.py
plugins/data-visualizer/commands/: app.py  pyproject.toml
plugins/hello-world-plugin/.claude-plugin/: plugin.json
plugins/hello-world-plugin/commands/: hello-world.py
plugins/new-taipei-open-data-list/commands/: new_taipei_open_data_list.py
plugins/taipei-open-data-list/commands/: pyproject.toml  taipei_open_data_list.py  wf.py
skill_impl/bbc_news/: bbc_news.py
skill_impl/html_to_ppt/: html_to_ppt.py
skill_impl/letex_to_pdf/: letex_to_pdf.py
skill_impl/md_to_letex/: md_to_letex.py
skill_impl/roboflow_ray_train/: roboflow_ray_train.py
skill_impl/roboflow_train/: roboflow_train.py
skills/: bbc_news.py
skills/bbc_news/: SKILL.md
skills/html_to_ppt/: SKILL.md  html_to_ppt.md
skills/letex_to_pdf/: SKILL.md
skills/md_to_letex/: SKILL.md
skills/roboflow_ray_train/: SKILL.md
skills/roboflow_train/: SKILL.md
(+40 files in other folders)
