[project]
name = "openclaw-like-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flyte[tui]>=2.0.9",
    "fpdf2>=2.8.7",
    "gradio>=6.9.0",
    "lxml>=6.0.2",
    "openai>=2.28.0",
    "openrouter>=0.7.11",
    "pandoc>=2.4",
    "python-pptx>=1.0.2",
    "pytorch-lightning>=2.6.1",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "ruff>=0.15.6",
]
